--- a/football_matches/Gemfile
+++ b/football_matches/Gemfile
@@ -58,6 +58,10 @@ group :development, :test do
   gem 'pry'
 end
 
+group :test do
+  gem 'shoulda-matchers'
+end
+
 group :development do
   # Use console on exceptions pages [https://github.com/rails/web-console]
   gem "web-console"
