--- a/football_matches/config/database.yml
+++ b/football_matches/config/database.yml
@@ -19,6 +19,11 @@ default: &default
   encoding: unicode
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
+  database: <%= ENV['DATABASE_NAME'] %>
+  username: <%= ENV['DATABASE_USER'] %>
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+  port: <%= ENV['DATABASE_PORT'] || '5432' %>
+  host: <%= ENV['DATABASE_HOST'] || '127.0.0.1' %>
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
 development:
@@ -82,5 +87,3 @@ test:
 production:
   <<: *default
   database: football_matches_production
-  username: football_matches
-  password: <%= ENV["FOOTBALL_MATCHES_DATABASE_PASSWORD"] %>
