--- a/.github/workflows/exchange_rate.yml
+++ b/.github/workflows/exchange_rate.yml
@@ -21,6 +21,14 @@ jobs:
           ruby-version: '3.2.2'
           bundler-cache: true
           working-directory: ./exchange_rate
+      - name: Setup Node
+        uses: actions/setup-node@v3
+      - name: Install dependencies
+        uses: bahmutov/npm-install@v1
+        with:
+          working-directory: ./exchange_rate
+      - name: Build project
+        run: yarn install
       - name: Install dependencies
         run: bundle install
       - name: Run tests
