--- a/exchange_rate/package.json
+++ b/exchange_rate/package.json
@@ -13,6 +13,7 @@
     "pinia": "^2.1.4",
     "sass": "^1.63.6",
     "vite-plugin-full-reload": "^1.0.4",
+    "vue": "3.2.26",
     "vue-router": "^4.2.2"
   }
 }
